<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="you">Player 1</string>
    <string name="who">Who asks?</string>
    <string name="what">What he/she suspected?</string>
    <string name="who2">Who revealed card?</string>
    <string name="delete_log">Delete log items by touching them.\n</string>
    <string name="are_you_sure_title">Are you sure?</string>
    <string name="are_you_sure">Do you really want to start a new game?</string>
    <string name="select_2">Select at least TWO players!</string>
    <string name="select_3">Select at least THREE cards!</string>
	<string name="back_button_title">Exit</string>
	<string name="back_button_msg">Do you really want to quit?</string>
	<string name="good_bye">Good Bye!</string>
    <string name="about">About</string>
    <string name="help">Help</string>
	<string name="player_prompt">Choose player</string>
	<string name="player_prompt2">Who revealed?</string>
	<string name="suspect_prompt">Choose suspect</string>
	<string name="weapon_prompt">Choose weapon</string>
	<string name="room_prompt">Choose room</string>
    <string name="title_section1">sheet</string>
    <string name="title_section2">input</string>
    <string name="title_section3">log</string>
    <string name="hit">Submit suspection!</string>
    <string name="add_card">Add known card</string>
    <string name="app_name">Cluedo Detective</string>
    <string name ="by">By:Rihis&amp;Osku_</string>
    <string name="tab1_help">\nHere you can see which cards are still possible answers.\n</string>
    <string name="tab2_help">\n1. Select the player who\'s turn it is.\n\n2. Then select the suspect, weapon and room the player is suspecting.\n\n3. Select the player who shows card if anyone. And finally push submit button\n\nYou can also add known card from the bottom button.\n </string>
    <string name="tab3_help">\nHere you see the log of the actions you have made. You can remove some log items simply just touching them.</string>
    <string name="title">Cluedo Detective</string>
  
</resources>