<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Give Me What Happened" />

    <Spinner
	    android:id="@+id/player_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:prompt="@string/player_prompt"
	    android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <Spinner
		    android:id="@+id/suspect_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
		    android:entries="@array/character_array"
		    android:prompt="@string/suspect_prompt"
		    android:spinnerMode="dialog" />
	    <Spinner
		    android:id="@+id/weapon_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
		    android:entries="@array/weapon_array"
		    android:prompt="@string/weapon_prompt"
		    android:spinnerMode="dialog" />
	    <Spinner
		    android:id="@+id/room_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
		    android:entries="@array/room_array"
		    android:prompt="@string/room_prompt"
		    android:spinnerMode="dialog" />
<<<<<<< HEAD

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	            
		        <TextView
		            android:id="@+id/textView5"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:text="@string/player_prompt2"
		            />

		</LinearLayout>

	    <Spinner
	        android:id="@+id/player_spinner2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="#1200FF"
	        android:prompt="@string/player_prompt2"
	        android:spinnerMode="dialog" />

			<Button
			    android:id="@+id/print_button"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    
			    android:text="@string/hit"
			    android:textSize="70dp" />

</LinearLayout>
=======
    </LinearLayout>

    <Spinner
        android:id="@+id/player_spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/player_prompt2"
        android:spinnerMode="dialog" />

    <Button
	    android:id="@+id/print_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:onClick="submitSuspection"
	    android:text="@string/hit" />

</LinearLayout>
>>>>>>> 5b3c38fad390a03b14fd66fe7cf6f9c18827d4e0
